Fix: letter spacing

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -733,7 +733,7 @@
     &-bottom
       height: 0
     &-card
-      padding: 30px 20px 24px
+      padding: 32px 20px 24px
     &-info
       max-width: 100% 
 
@@ -812,13 +812,14 @@
         font-weight: 600
         font-size: 16px
         line-height: 22px
-        letter-spacing: 0.1px
+        letter-spacing: 0
         .fa-minus, .fa-plus
           max-width: 9px
           margin-top: 9px
-          margin-left: 12px
+          margin-left: 14px
           margin-right: -2px
         .fa-minus
+          margin-left: 18px
           margin-top: 6px
       & :checked + .tab-title
         font-family: Open Sans
@@ -826,6 +827,7 @@
         font-weight: bold
         font-size: 16px
         line-height: 22px
+        letter-spacing: 0
         color: $primary
       & :checked ~ .tab-content
         max-width: 96%
